--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "@rails/webpacker": "^5.4.4",
-    "flatpickr": "^4.6.13"
+    "flatpickr": "^4.6.13",
+    "jquery": "^3.7.0",
+    "jquery-ui": "^1.13.2"
   }
 }
